--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -81,3 +81,7 @@ required = [
 [[constraint]]
   name = "github.com/Masterminds/sprig"
   version = "2.19.0"
+
+[[constraint]]
+  name = "github.com/vishvananda/netlink"
+  version = "1.0.0"
