--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -85,3 +85,7 @@ required = [
 [[constraint]]
   name = "github.com/vishvananda/netlink"
   version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/nmiculinic/wg-quick-go"
