--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,10 @@ go_build:
     DOCKERVERSION: 18.09.3
   before_script:
     - mkdir -p $GOPATH/src/github.com/KrakenSystems/
+    - cd $GOPATH/src/github.com/KrakenSystems/
+    - ln -s $(pwd)
     - export GO_PROJECT_PATH="$GOPATH/src/github.com/KrakenSystems/${CI_PROJECT_NAME}"
     - echo $GO_PROJECT_PATH
-    - ln -s $GO_PROJECT_PATH $(pwd)
     - cd $GO_PROJECT_PATH
     - pwd
     - ls
