--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Temporary Build Files
+.DS_Store
 build/_output
 build/_test
 # Created by https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
