--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
 
 go_build:
   variables:
-    DOCKERVERSION: 18.09.3
+    # DOCKERVERSION: 18.09.3
     # When using dind service we need to instruct docker, to talk with the
     # daemon started inside of the service. The daemon is available with
     # a network connection instead of the default /var/run/docker.sock socket.
@@ -24,6 +24,11 @@ go_build:
     # improved performance.
     # DOCKER_DRIVER: overlay2
   before_script:
+    - apk update && apk add git docker
+    # - echo https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
+    # - curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
+    # - tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker
+    - docker info
     - go env
     - mkdir ~/.docker || true
     - echo $DOCKER_CONFIG | base64 -d > ~/.docker/config.json
@@ -37,10 +42,6 @@ go_build:
     - pwd
     - ls
     - go get github.com/golang/dep/cmd/dep  # Install dep
-    - echo https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
-    - curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
-    - tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker
-    - docker info
     - cd $GO_PROJECT_PATH
     - pwd
     - ls
@@ -54,7 +55,7 @@ go_build:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN ${CI_REGISTRY}
     - dep ensure -vendor-only
     - go test ./...
-    - GOOS=linux GOARCH=amd64 go build -o build/${CI_PROJECT_NAME}-amd64 ./cmd/manager
+    - GOOS=linux GOARCH=amd64 go build -a -ldflags '-extldflags "-static"' -o build/${CI_PROJECT_NAME}-amd64 ./cmd/manager
     - |
       cat << EOF > pack.Dockerfile
       FROM alpine
@@ -68,7 +69,7 @@ go_build:
     - docker build -t ${IMAGE_BRANCH}-amd64 -f pack.Dockerfile .
     - docker push ${IMAGE_BRANCH}-amd64
     - echo "========="
-    - GOOS=linux GOARCH=arm GOARM=7 go build -o build/${CI_PROJECT_NAME}-arm32v7 ./cmd/manager
+    - GOOS=linux GOARCH=arm GOARM=7 go build -a -ldflags '-extldflags "-static"' -o build/${CI_PROJECT_NAME}-arm32v7 ./cmd/manager
     - |
       cat << EOF > pack.Dockerfile
       FROM arm32v7/alpine
@@ -82,7 +83,7 @@ go_build:
     - docker build -t ${IMAGE_BRANCH}-arm32v7 -f pack.Dockerfile .
     - docker push ${IMAGE_BRANCH}-arm32v7
     - echo "========="
-    - GOOS=linux GOARCH=arm64 go build -o build/${CI_PROJECT_NAME}-arm64v8 ./cmd/manager
+    - GOOS=linux GOARCH=arm64 go build -a -ldflags '-extldflags "-static"' -o build/${CI_PROJECT_NAME}-arm64v8 ./cmd/manager
     - |
       cat << EOF > pack.Dockerfile
       FROM arm64v8/alpine
