--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,9 +25,9 @@ go_build:
     # DOCKER_DRIVER: overlay2
     CGO_ENABLED: 0
   before_script:
-    # - echo https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
-    # - curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
-    # - tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker
+    - echo https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
+    - curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
+    - tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker
     - docker info
     - go env
     - mkdir ~/.docker || true
