Extended CRD to support for multiple address and other fields

--- a/deploy/clients/cl1.yaml
+++ b/deploy/clients/cl1.yaml
@@ -11,3 +11,4 @@ spec:
   publicKey: oj/x/PIWqBGgE7NQqtum4ZD+2vruwRmcuTl8/VWwPnc=
   address: "10.102.0.10"
   extraAllowedIPs: []
+  preUp: "echo I'm alive"
