added verbose dep

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ go_build:
     - mkdir -p .cache
     - export GOCACHE=${CI_PROJECT_DIR}/.cache
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN ${CI_REGISTRY}
-    - dep ensure -vendor-only
+    - dep ensure -vendor-only -v
     - go env
     - go test ./...
     - GOOS=linux GOARCH=amd64 go build -a -ldflags '-extldflags "-static"' -o build/${CI_PROJECT_NAME}-amd64 ./cmd/manager
@@ -105,4 +105,3 @@ go_build:
     key: ${CI_COMMIT_REF_SLUG}
     paths:
       - .cache/
-
